# ds-input

./: .gitignore  CLAUDE.md  DESIGN.md  README.md
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml
core/data/: gen_corpus.py  seed_corpus.tsv
core/examples/: bake_seed.rs  cli.rs
core/include/: dsime.h
core/src/: api.rs  config.rs  engine.rs  lib.rs  ngram.rs
core/tests/: candidates.rs  mock_server.rs  speculative.rs  teardown.rs
macos/: DSInput.entitlements  README.md  build.sh  install.sh  project.yml
macos/Installer/: README.md  build-installer.sh  project.yml
macos/Installer/Resources/: Info.plist
macos/Installer/Sources/: InstallerModel.swift  WizardView.swift  main.swift
macos/Resources/: AppIcon.icns  Info.plist
macos/Resources/Base.lproj/: InfoPlist.strings
macos/Resources/zh-Hans.lproj/: InfoPlist.strings
macos/Sources/DSInput/: AppDelegate.swift  DSInputController.swift  PreferencesWindowController.swift  dsime_bridge.h  main.swift
windows/: CMakeLists.txt  Composition.cpp  DisplayAttribute.cpp  DsimeCore.h  EditSessions.cpp  Globals.h  Guids.cpp  Guids.h  KeyEventSink.cpp  LangBarButton.cpp  README.md  Registry.cpp  Registry.h  TextService.cpp  TextService.h  build.ps1  dllmain.cpp  dsime_tsf.def  dsime_tsf.rc  resource.h
windows/installer/: CMakeLists.txt  DSInputInstaller.cpp  DSInputInstaller.rc  README.md  build-installer.ps1  installer.manifest  resource.h
windows/settings/: DSInputSettings.cpp  DSInputSettings.rc
