[package]
name = "dsime"
version = "0.1.0"
edition = "2021"
description = "LLM whole-sentence pinyin input method core engine (OpenAI-compatible)"
license = "MIT"

[lib]
name = "dsime"
# cdylib: dynamic lib for the platform frontends to link against.
# staticlib: optional static linking. rlib: for the in-crate tests / examples.
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"

[profile.release]
lto = true
codegen-units = 1
strip = true
